# python-sdk

./: LICENSE.txt  README.md  pyproject.toml
examples/contribution/: email_daq.ini  imap_daq.py  outlook_daq.py
examples/market/: bwic_poll.py  bwics_to_intex.py  corp_poll.py  eod_data_grab.py  intex_mktd.py  runs_poll.py
examples/parser/: call_mapper.py  mydata_poll.py  parse_bwic.py  parse_imap_inbox.py  parse_msgraph_inbox.py  parse_outlook_inbox.py  parse_run.py
src/empirasign/: __init__.py  base_client.py  constants.py  utils.py
src/empirasign/market/: client.py  schemas.py
src/empirasign/parser/: client.py  schemas.py
